--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
+    "@adonisjs/mail": "^3.0.10",
     "@adonisjs/session": "^1.0.27",
     "@adonisjs/shield": "^1.0.8",
+    "adonis-mail-provider": "^2.0.2",
     "lucid-mongo": "^3.1.2"
   },
   "devDependencies": {},
