--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/mail": "^3.0.10",
-    "@adonisjs/session": "^1.0.27",
+    "@adonisjs/session": "^1.0.29",
     "@adonisjs/shield": "^1.0.8",
     "adonis-mail-provider": "^2.0.2",
-    "lucid-mongo": "^3.1.2"
+    "lodash": "^4.17.15",
+    "lucid-mongo": "^3.1.2",
+    "moment": "^2.24.0",
+    "superagent": "^5.1.0"
   },
   "devDependencies": {},
   "autoload": {
