--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "adonis-fullstack-app",
+  "name": "server",
   "version": "4.1.0",
   "adonis-version": "4.1.0",
   "description": "The fullstack application boilerplate for Adonisjs",
@@ -12,7 +12,7 @@
     "adonisjs",
     "adonis-app"
   ],
-  "author": "",
+  "author": "jepm16",
   "license": "UNLICENSED",
   "private": true,
   "dependencies": {
@@ -27,6 +27,7 @@
     "@adonisjs/mail": "^3.0.10",
     "@adonisjs/session": "^1.0.29",
     "@adonisjs/shield": "^1.0.8",
+    "@adonisjs/validator": "^5.0.6",
     "adonis-mail-provider": "^2.0.2",
     "lodash": "^4.17.15",
     "lucid-mongo": "^3.1.2",
@@ -36,5 +37,13 @@
   "devDependencies": {},
   "autoload": {
     "App": "./app"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jepM161996/adonisServerLoginwithAutJWT.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jepM161996/adonisServerLoginwithAutJWT/issues"
+  },
+  "homepage": "https://github.com/jepM161996/adonisServerLoginwithAutJWT#readme"
 }
